<resources>
    <string name="app_name">AgileTracker</string>

    <string name="hello_world">Enter Score!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_message">
        <![CDATA[


            A basic sample which shows how to use SlidingTabLayout to display a custom
            ViewPager title strip which gives continuous feedback to the user when scrolling.


        ]]>
    </string>
    <string name="login">Login</string>
    <string name="username">User name</string>
    <string name="password_text">Password</string>
    <string name="repo">Repository name</string>
    <string name="repo_owner">Repository owner</string>
    <string name="accept_login">Log in</string>
    <string name="logout">Log out</string>
</resources>
